fixed navbar hover with z-index

--- a/assets/scss/_intro.scss
+++ b/assets/scss/_intro.scss
@@ -3,14 +3,11 @@
   animation: fadein 10s forwards ease;
   animation-delay: 3s;
   opacity: 0;
-  // width: 100%;
   height: 100vh;
-  vertical-align: middle;
   display: flex;
   align-items: center;
   justify-content: center;
   .logo {
-    position: relative;
     margin: -40%;
     display: flex;
     // vertical-align: middle;
