--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -1,6 +1,7 @@
 nav {
   position: sticky;
   top: 0;
+  z-index: 5;
   .nav {
     padding-top: 1rem;
     text-shadow: 3px 3px 4px black;
