--- a/assets/scss/_video.scss
+++ b/assets/scss/_video.scss
@@ -4,4 +4,5 @@
   opacity: 0;
   animation: fadein 2s forwards ease;
   animation-delay: 500ms;
+  box-shadow: 0px 5px 4px -4px black;
 }
