--- a/assets/scss/_wrapper.scss
+++ b/assets/scss/_wrapper.scss
@@ -3,13 +3,15 @@
   height: auto;
   background: $color1;
   color: $color3;
-  text-align: left;
+  text-align: justify;
   display: flex;
   align-items: center;
+
   .container {
     width: 55%;
     margin: 5% auto;
     h1 {
+      color: $color2;
       font-size: 2.25em;
       font-weight: 80;
       margin-block-end: 1em;
